--- a/noticies/2016-07-04-SIC-MySQL-i-SQLSERVER/index.html
+++ b/noticies/2016-07-04-SIC-MySQL-i-SQLSERVER/index.html
@@ -324,7 +324,7 @@
 
 <p>Destacar que l&rsquo;execució de scripts només es troba disponible per als entorns d&rsquo;INT. Per PRE i PRO, els procediments de desplegament són semi-automàtics amb lliurament per sFTP d&rsquo;artefactes a CPD, i enviament de correu de sol·licitud de desplegament a SAU CTTI o sol·licitud de canvi a Remedy.</p>
 
-<p>Per a qualsevol dubte referent a l&rsquo;execució de scripts de MongoDB ens podeu <a href="http://canigo.ctti.gencat.cat/sic/peticions/">obrir una consulta</a> al servei &ldquo;FRAMEWORK SIC&rdquo; de SAU-Remedy.</p>
+<p>Per a qualsevol dubte referent a l&rsquo;execució de scripts de base de dades ens podeu <a href="http://canigo.ctti.gencat.cat/sic/peticions/">obrir una consulta</a> al servei &ldquo;FRAMEWORK SIC&rdquo; de SAU-Remedy.</p>
 
 
 					
