--- a/noticies/2016-06-08-GICAR-documentacio/index.html
+++ b/noticies/2016-06-08-GICAR-documentacio/index.html
@@ -306,7 +306,7 @@
 
 						<p>Al mes de Juny es publica la documentació de GICAR a la web d&rsquo;Arquitectura CTTI.</p>
 
-<p>Aquesta documentació pretèn ajudar als integradors a conèixer el funcionament de GICAR, l&rsquo;arquitectura i els fluxos d&rsquo;autenticació.</p>
+<p>Aquesta documentació pretén ajudar als integradors a conèixer el funcionament de GICAR, l&rsquo;arquitectura i els fluxos d&rsquo;autenticació.</p>
 
 <p>Una fita molt important que volem destacar, és el fet que posem a disposició dels desenvolupadors, un entorn de Sandbox, públic i basat en Docker amb el qual podran fer proves de funcionament real de les aplicacions integrades amb GICAR: <a href="http://canigo.ctti.gencat.cat/gicar-integracio/sandbox/">http://canigo.ctti.gencat.cat/gicar-integracio/sandbox/</a></p>
 
