--- a/destacats-related/sgde-campsrequerits/index.html
+++ b/destacats-related/sgde-campsrequerits/index.html
@@ -304,7 +304,7 @@
 
 					
 
-						<p>Us recordem que els camps <code>ambit</code> i <code>aplicacio</code> passaran a ser obligatoris per a totes les versions del WS publicades a la plataforma. El desplegament d&rsquo;aquest canvi està planificat pel <sup>28</sup>&frasl;<sub>9</sub> a l&rsquo;entorn de PRE i el <sup>28</sup>&frasl;<sub>11</sub> a l&rsquo;entorn de PRO. Per tant, <strong>totes les aplicacions hauran d&rsquo;haver estat adaptades per informar aquests camps i desplegades en el corresponent entorn abans no es faci efectiu el canvi. En cas contrari les crides seran rebutjades</strong>. Destacar que la validació afegida per aquests camps no suposa  regenerar de nou el client del WS, ja que els camps existeixen, només cal informar-los.</p>
+						<p>Us recordem que els camps <code>ambit</code> i <code>aplicacio</code> passaran a ser obligatoris per a totes les versions del WS publicades a la plataforma. El desplegament d&rsquo;aquest canvi està planificat pel 28/09/2016 a l&rsquo;entorn de PRE i el 28/11/2016 a l&rsquo;entorn de PRO. Per tant, <strong>totes les aplicacions hauran d&rsquo;haver estat adaptades per informar aquests camps i desplegades en el corresponent entorn abans no es faci efectiu el canvi. En cas contrari les crides seran rebutjades</strong>. Destacar que la validació afegida per aquests camps no suposa  regenerar de nou el client del WS, ja que els camps existeixen, només cal informar-los.</p>
 
 
 					
