--- a/canigo-documentacio/how-tos/index.html
+++ b/canigo-documentacio/how-tos/index.html
@@ -320,6 +320,9 @@
 <p>How-to disponibles actualment:</p>
 
 <ul>
+<li><a href="/related/canigo/howto/Canigo - Howto - Contenidor GICAR en entorns de desenvolupament.pdf">Canigó - Contenidor GICAR en entorns de desenvolupament</a></li>
+<li><a href="/related/canigo/howto/Canigo - Incorporacio modul Administracio de logs a aplicacio Canigo 3.pdf">Canigó - Incorporació mòdul Administració de logs a aplicació Canigó</a></li>
+<li><a href="/related/canigo/howto/Canigo - Analisi aplicacio Canigo amb Sonar.pdf">Canigó - Anàlisi aplicació Canigó amb Sonar</a></li>
 <li><a href="/related/canigo/howto/Canigo - Websockets a Canigo 3.1.pdf">Canigó - Websockets a Canigó 3.1</a></li>
 <li><a href="/related/canigo/howto/Canigo - Streaming de fitxers en clients REST.pdf">Canigó - Streaming de fitxers en clients REST</a></li>
 <li><a href="/related/canigo/howto/Canigo - Actualitzacio Connectors PICA.pdf">Canigó - Actualització connectors amb la PICA</a></li>
