--- a/cloud/aq/index.html
+++ b/cloud/aq/index.html
@@ -431,9 +431,7 @@ $ docker-compose -f ./src/main/docker/docker-compose.yml up -d
 <pre><code>$ docker-compose -f ./src/main/docker/docker-compose.yml up -d --build
 </code></pre>
 
-<p>Accedir a <a href="http://localhost/canigoJSF">http://localhost/canigoJSF</a> i introduïr l&rsquo;usuari &ldquo;[user]&rdquo; i contrasenya &ldquo;[password]&ldquo;.</p>
-
-<p><em>Nota: L&rsquo;usuari i contrasenya per l&rsquo;accés a l&rsquo;aplicació es publicaran pròximament</em></p>
+<p>Accedir a <a href="http://localhost/canigoJSF">http://localhost/canigoJSF</a> i introduïr l&rsquo;usuari &ldquo;NIFDEMO&rdquo; i contrasenya &ldquo;12345678&rdquo;.</p>
 
 <h2 id="stack-arquitectura-moderna-jee-span-style-color-red-draft-span:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;arquitectura moderna&rdquo; JEE (<span style="color:red;">DRAFT</span>)</h2>
 
