--- a/cloud/aq/index.html
+++ b/cloud/aq/index.html
@@ -415,7 +415,11 @@ demo:
 <li><em>mysql-datadir</em>: directori amb les dades del MySQL. Es crearà amb tot el contingut en iniciar per primera vegada l&rsquo;aplicació</li>
 </ul>
 
-<p>_Nota: El valor nom del contenidor i el nom de domini els tria l&rsquo;usuari</p>
+<p><em>Nota: El valor nom del contenidor i el nom de domini els tria l&rsquo;usuari. Per exemple:</em><br>
+<em>ContainerHostName: dev</em><br>
+<em>AGENTNAME: a6-demoform, provademo.gencat.cat</em><br>
+<em>En cas de voler accedir per domini en comptes de localhost, s&rsquo;ha de mappejar aquest domini/ip al fitxer host</em>
+<em>(En linux /etc/host, en Windows C:\Windows\System32\drivers\etc\hosts)</em></p>
 
 <p>Comandes per iniciar l&rsquo;aplicació:</p>
 
