--- a/cloud/aq/index.html
+++ b/cloud/aq/index.html
@@ -312,10 +312,10 @@
 <li><a href="#desplegament-a-bluemix:86806683e3ea945dc5182e8e6cca12d7">Desplegament a Bluemix</a></li>
 </ul></li>
 </ul></li>
-<li><a href="#stack-tradicional-jee-span-style-color-red-draft-span:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;tradicional&rdquo; JEE (<span style='color:red;'>DRAFT</span>)</a></li>
-<li><a href="#stack-arquitectura-moderna-jee-span-style-color-red-draft-span:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;arquitectura moderna&rdquo; JEE (<span style="color:red;">DRAFT</span>)</a></li>
-<li><a href="#stack-mean-span-style-color-red-draft-span:86806683e3ea945dc5182e8e6cca12d7">Stack MEAN (<span style="color:red;">DRAFT</span>)</a></li>
-<li><a href="#stack-lamp-span-style-color-red-draft-span:86806683e3ea945dc5182e8e6cca12d7">Stack LAMP (<span style="color:red;">DRAFT</span>)</a></li>
+<li><a href="#stack-tradicional-jee:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;tradicional&rdquo; JEE</a></li>
+<li><a href="#stack-arquitectura-moderna-jee:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;arquitectura moderna&rdquo; JEE</a></li>
+<li><a href="#stack-mean:86806683e3ea945dc5182e8e6cca12d7">Stack MEAN</a></li>
+<li><a href="#stack-lamp:86806683e3ea945dc5182e8e6cca12d7">Stack LAMP</a></li>
 <li><a href="#altres:86806683e3ea945dc5182e8e6cca12d7">Altres</a>
 <ul>
 <li><a href="#xpaas-dbaas:86806683e3ea945dc5182e8e6cca12d7">xPaaS + DBaaS</a></li>
@@ -352,7 +352,7 @@
 <li>En un futur proper serà possible desplegar aplicacions en contenidors definides amb docker-compose a Bluemix mitjançant el <a href="http://canigo.ctti.gencat.cat/sic/">SIC</a>.</li>
 </ul>
 
-<h2 id="stack-tradicional-jee-span-style-color-red-draft-span:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;tradicional&rdquo; JEE (<span style='color:red;'>DRAFT</span>)</h2>
+<h2 id="stack-tradicional-jee:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;tradicional&rdquo; JEE</h2>
 
 <p>Aplicació JSF (Java Server Faces) amb context &ldquo;/AppJava&rdquo; per separació contingut estàtic i dinàmic.</p>
 
@@ -437,7 +437,7 @@ $ docker-compose -f ./src/main/docker/docker-compose.yml up -d
 
 <p>Accedir a <a href="http://localhost/canigoJSF">http://localhost/canigoJSF</a> i introduïr l&rsquo;usuari &ldquo;NIFDEMO&rdquo; i contrasenya &ldquo;12345678&rdquo;.</p>
 
-<h2 id="stack-arquitectura-moderna-jee-span-style-color-red-draft-span:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;arquitectura moderna&rdquo; JEE (<span style="color:red;">DRAFT</span>)</h2>
+<h2 id="stack-arquitectura-moderna-jee:86806683e3ea945dc5182e8e6cca12d7">Stack &ldquo;arquitectura moderna&rdquo; JEE</h2>
 
 <p>Aplicació basada en serveis REST i presentació desacoblada</p>
 
@@ -496,7 +496,7 @@ $ docker-compose -f ./src/main/docker/docker-compose.yml up -d
 
 <p>Accedir a <a href="http://localhost/">http://localhost/</a> i introduïr l&rsquo;usuari &ldquo;admin&rdquo; i contrasenya &ldquo;admin&rdquo;.</p>
 
-<h2 id="stack-mean-span-style-color-red-draft-span:86806683e3ea945dc5182e8e6cca12d7">Stack MEAN (<span style="color:red;">DRAFT</span>)</h2>
+<h2 id="stack-mean:86806683e3ea945dc5182e8e6cca12d7">Stack MEAN</h2>
 
 <p>Aplicació basada en MongoDB+Express+AngularJS+NodeJS</p>
 
@@ -540,7 +540,7 @@ $ docker-compose -f ./docker/docker-compose.yml up -d
 <pre><code>$ docker-compose -f ./docker/docker-compose.yml up -d --build
 </code></pre>
 
-<h2 id="stack-lamp-span-style-color-red-draft-span:86806683e3ea945dc5182e8e6cca12d7">Stack LAMP (<span style="color:red;">DRAFT</span>)</h2>
+<h2 id="stack-lamp:86806683e3ea945dc5182e8e6cca12d7">Stack LAMP</h2>
 
 <p><img src="/related/cloud/lamp.gif" alt="LAMP" title="LAMP" /></p>
 
